[tool.poetry]
name = "turner-lab"
version = "0.1.0"
description = ""
authors = ["Sam Ball <stmball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
shapely = "^2.0.3"
scikit-learn = "^1.4.1.post1"
torch = "^2.2.1"
torchvision = "^0.17.1"
rich = "^13.7.1"
tensorboard = "^2.16.2"
scikit-image = "^0.24.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
