[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sam Ball <stmball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
oct-malaria-malawi = {path = "../../oct_malaria_malawi"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
